--- a/Self.html
+++ b/Self.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Hello World！</title>
+		<title>Hello World</title>
 	</head>
 	<body>
 		<a href="https://www.facebook.com/br821024" target="_blank"><img src="./Self.jpg"></a>
